crates/ars-i18n/tests/ui/translate_explicit_text_without_locale.stderr
error: Translate explicit text attributes must include locale = "..."
 --> tests/ui/translate_explicit_text_without_locale.rs:6:24
  |
6 |     #[translate(text = "Hello")]
  |                        ^^^^^^^
