crates/ars-i18n/tests/ui/translate_explicit_text_without_locale.rs
use ars_i18n::Translate;

#[derive(Translate)]
#[translate(fallback = "en")]
enum BadText {
    #[translate(text = "Hello")]
    Hello,
}

fn main() {}
